--- a/my-app/src/app/landing-page/landing-page.component.css
+++ b/my-app/src/app/landing-page/landing-page.component.css
@@ -2,7 +2,7 @@ div {
     height: 100vh;
     width: 100vw;
     background-image: url(./img/div_bg.jpg);
-    background-size: contain;
+    background-size: cover;
     background-repeat: no-repeat;
     display: flex;
     margin: 0px;
